# PersonalBudgetTracker

./: .env  .env.example  .env.sample  .gitignore  .replit  .replit2  .workflow_config  BudgetAI_Technical_Documentation.md  INSTALLATION.md  INSTALLATION_VSCODE.md  README-render.md  README.md  add_sample_data.py  ai_assistant.py  ai_assistant_backup.py  app.py  budget_ai_poster.html  budget_ai_poster.py  check_business_users.py  check_expenses.py  check_users.py  config.py  conversation_assistant.py  create_admin.py  create_blank_excel_template.py  create_database.sql  create_excel_template.py  create_multiple_users.py  create_test_admin.py  database.py  db_create_all.py  email_validator.py  excel_processor.py  excel_visualizer.py  expense_forecasting.py  expense_tracker.py  export_database.py  forms.py  gmail_validator.py  init_database.py  (+32 more)
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-data-bs-theme-light-head-meta-charset-UTF-8-me-1744215616853.txt  Pasted--Forms-module-for-the-Expense-Tracker-application-Defines-the-forms-used-in-the-application--1744640658065.txt  Pasted--Plaid-integration-module-for-the-Expense-Tracker-application-Used-to-fetch-financial-data-fro-1744083697298.txt  Pasted--Script-to-create-business-related-database-tables-safely-import-time-import-logging--1744607732120.txt  Pasted--Script-to-create-business-related-database-tables-safely-import-time-import-logging--1744611568733.txt  Pasted--Visualization-module-for-the-Expense-Tracker-application-Generates-chart-data-for-visualizing-1744085271512.txt  content-1744597451356.md  (+12 more)
(+45 files in other folders)
